--- a/boulder_d11_profile.info.yml
+++ b/boulder_d11_profile.info.yml
@@ -1,7 +1,7 @@
 ---
 name: CU Boulder Drupal 11 Install Profile
 type: profile
-description: "CU Boulder Web Express D10 Installation Profile"
+description: "CU Boulder Web Express Drupal 11 Installation Profile"
 core_version_requirement: "^11.2"
 # Modules to install to support the profile.
 install:
@@ -102,7 +102,6 @@ install:
   - menu_firstchild
   - responsive_preview
   - anchor_link
-  - simplesamlphp_auth
   - captcha
   - recaptcha_v3
   - rebuild_cache_access
